Fixed prefer_model_specific_functions flag in new example yaml 	modified:   yaml_files/spartan_req_modelparameters.yaml

--- a/yaml_files/spartan_req_modelparameters.yaml
+++ b/yaml_files/spartan_req_modelparameters.yaml
@@ -96,7 +96,8 @@ KeyValues:
 
   print_timing_data: true
 
-  prefer_model_specific_functions: false
+  dependency_resolution:
+    prefer_model_specific_functions: false
 
   likelihood:
     model_invalid_for_lnlike_below: -1e6
