Made python test backends aware of the python version: LibSecond 1.0, LibThird 1.0 --> Python 2 (only) LibSecond 1.1, LibThird 1.1 --> Python 3 (only) LibSecond 1.2, LibThird 1.2 --> Python 2 or 3
	modified:   Backends/examples/libsecond/1.0/libsecond_1_0.py
	modified:   Backends/examples/libsecond/1.1/libsecond_1_1.py
	new file:   Backends/examples/libsecond/1.2/libsecond_1_2.py
	modified:   Backends/examples/libthird/1.0/libthird_1_0/main.py
	modified:   Backends/examples/libthird/1.1/libthird_1_1/__init__.py
	modified:   Backends/examples/libthird/1.1/libthird_1_1/main.py
	new file:   Backends/examples/libthird/1.2/libthird_1_2/__init__.py
	new file:   Backends/examples/libthird/1.2/libthird_1_2/main.py
	new file:   Backends/examples/libthird/1.2/libthird_1_2/sub_module.py
	modified:   Backends/include/gambit/Backends/frontends/LibSecond_1_0.hpp
	modified:   Backends/include/gambit/Backends/frontends/LibSecond_1_1.hpp
	new file:   Backends/include/gambit/Backends/frontends/LibSecond_1_2.hpp
	modified:   Backends/include/gambit/Backends/frontends/LibThird_1_0.hpp
	modified:   Backends/include/gambit/Backends/frontends/LibThird_1_1.hpp
	new file:   Backends/include/gambit/Backends/frontends/LibThird_1_2.hpp
	modified:   Backends/src/backend_info.cpp
	new file:   Backends/src/frontends/LibSecond_1_2.cpp
	new file:   Backends/src/frontends/LibThird_1_2.cpp
	modified:   config/backend_locations.yaml.default
	modified:   yaml_files/Python_test.yaml

--- a/yaml_files/Python_test.yaml
+++ b/yaml_files/Python_test.yaml
@@ -69,7 +69,7 @@ Rules:
 Logger:
 
   redirection:
-    [Default]      : "default.log"
+    [Default]      : stdout
     [ExampleBit_A] : "ExampleBit_A.log"
     [Scanner]      : "Scanner.log"
 
