Completed support for Python 3 backends 	modified:   Backends/include/gambit/Backends/backend_info.hpp 	modified:   Backends/include/gambit/Backends/interoperability_macros.hpp 	modified:   Backends/src/backend_info.cpp 	modified:   Core/src/core.cpp 	modified:   Models/include/gambit/Models/models/MSSM30atMSUSY.hpp 	modified:   cmake/cmake_variables.hpp.in 	modified:   yaml_files/Python_test.yaml

--- a/cmake/cmake_variables.hpp.in
+++ b/cmake/cmake_variables.hpp.in
@@ -54,6 +54,10 @@
 #cmakedefine MATHEMATICA_WSTP_H "@Mathematica_WSTP_INCLUDE_DIR@/wstp.h"
 #cmakedefine MATHEMATICA_KERNEL "@Mathematica_KERNEL_EXECUTABLE@"
 
+/// Python version info
+#cmakedefine PYTHON_VERSION_MAJOR @PYTHON_VERSION_MAJOR@
+#cmakedefine PYTHON_VERSION_MINOR @PYTHON_VERSION_MINOR@
+
 /// Found/installed pybind11
 #cmakedefine HAVE_PYBIND11 1
 
