Added more informative error for cases where the python libraries are not found. 	modified:   CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -121,7 +121,19 @@ find_package(PythonLibs ${PYTHON_VERSION_STRING} EXACT)
 
 # Check for pybind11 if PythonLibs were found
 if(NOT PYTHONLIBS_FOUND)
-    message("${BoldRed}   PythonLibs NOT found, so pybind11 cannot be used${ColourReset}")
+    message("${BoldRed}")
+    message("   PythonLibs NOT found, so pybind11 cannot be used${ColourReset}")
+    message("     If you *do* have the libraries installed for Python ${PYTHON_VERSION_STRING}, this")
+    message("     is happening due to a bug in FindPythonLibs.cmake in your version of cmake (${CMAKE_VERSION}).")
+    message("     In this case you have three options:")
+    message("     1. Try upgrading cmake")
+    message("     2. Just run GAMBIT without pybind11 (means no support for Python backends)")
+    message("     3. Set the following variables when invoking cmake:")
+    message("       PYTHON_LIBRARY")
+    message("       PYTHON_INCLUDE_DIR")
+    message("       PYTHON_INCLUDE_DIR2 (you might be able to get away without this one)")
+    message("       PYTHON_EXECUTABLE   (you might be able to get away without this one)")
+    message("${ColourReset}")
 else()
     set(MIN_pybind11_VERSION "2.2.0")
     set(PREFERRED_pybind11_VERSION "2.2.1")
