More tweaks to cmake treatment of Python2/3 dichotomy. 	modified:   CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,71 +102,89 @@ SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 include(cmake/utilities.cmake)
 
 # Check for Python interpreter
-# Use Python 3 if available, otherwise look for Python 2.7
 # We also need to search for PythonLibs before letting pybind11 look for them,
 # otherwise it seems to get it wrong.  Also, we need to add versions of python
 # greater than 3.3 manually, for compatibility with CMake 2.8.12.
 set(Python_ADDITIONAL_VERSIONS 3.4 3.5 3.6 3.7)
-if (USE_PYTHON2)
+if (FORCE_PYTHON2)
   message("${BoldYellow}   Python 2 requested; searching for Python 2.7${ColourReset}")
   find_package(PythonInterp 2.7 REQUIRED)
+  find_package(PythonLibs ${PYTHON_VERSION_STRING} EXACT)
+elseif (FORCE_PYTHON3)
+  message("${BoldYellow}   Python 3 requested; searching for Python 3.x${ColourReset}")
+  find_package(PythonInterp 3 REQUIRED)
+  find_package(PythonLibs ${PYTHON_VERSION_STRING} EXACT)
 else()
-  find_package(PythonInterp 3)
-  if(NOT PYTHONINTERP_FOUND)
-    message("${BoldYellow}   Python 3 not found, searching for Python 2.7${ColourReset}")
-    find_package(PythonInterp 2.7 REQUIRED)
+  find_package(PythonInterp REQUIRED)
+  if ((PYTHON_VERSION_MAJOR LESS 2) OR (PYTHON_VERSION_MAJOR EQUAL 2 AND PYTHON_VERSION_MINOR LESS 7))
+    message(FATAL_ERROR "\nGAMBIT requires Python 2.7 or 3.x.  \nIf you need to set the path to the Python interpreter manually, "
+                        "please use -DPYTHON_EXECUTABLE=path/to/preferred/python.")
+  endif()
+  find_package(PythonLibs)
+endif()
+message("${BoldYellow}   Using Python interpreter version ${PYTHON_VERSION_STRING} for build.${ColourReset}")
+if(PYTHONLIBS_FOUND)
+  message("${BoldYellow}   Using Python libraries version ${PYTHONLIBS_VERSION_STRING} for Python backend support.${ColourReset}")
+  if (NOT "${PYTHON_VERSION_STRING}" STREQUAL "${PYTHONLIBS_VERSION_STRING}")
+    message("${BoldRed}   NOTE: You are using different Python versions for the interpreter and the libraries!${ColourReset}")
+    message("   In principle this should be fine, as the interpreter is only used for building GAMBIT, and the")
+    message("   libraries are only used for providing support for Python backends at runtime.  However, if you")
+    message("   have matching versions installed, you can make this message go away by trying the following")
+    message("   (making sure to clean out your build directory in between any such changes):")
+    message("   1. invoke cmake as cmake -DFORCE_PYTHON2=True .. (or similar)")
+    message("   2. invoke cmake as cmake -DFORCE_PYTHON3=True .. (or similar)")
+    message("   3. set the following variables when invoking cmake:")
+    message("     PYTHON_LIBRARY")
+    message("     PYTHON_INCLUDE_DIR")
+    message("     PYTHON_INCLUDE_DIR2 (you might be able to get away without setting this one)")
+    message("     PYTHON_EXECUTABLE   (you might be able to get away without setting this one)")
   endif()
 endif()
-find_package(PythonLibs ${PYTHON_VERSION_STRING} EXACT)
 
 # Check for pybind11 if PythonLibs were found
 if(NOT PYTHONLIBS_FOUND)
-    message("${BoldRed}")
-    message("   PythonLibs NOT found, so pybind11 cannot be used${ColourReset}")
-    message("     If you *do* have the libraries installed for Python ${PYTHON_VERSION_STRING}, this")
-    message("     is happening due to a bug in FindPythonLibs.cmake in your version of cmake (${CMAKE_VERSION}).")
-    message("     In this case you have three options:")
-    message("     1. Try upgrading cmake")
-    message("     2. Just run GAMBIT without pybind11 (means no support for Python backends)")
-    message("     3. Set the following variables when invoking cmake:")
-    message("       PYTHON_LIBRARY")
-    message("       PYTHON_INCLUDE_DIR")
-    message("       PYTHON_INCLUDE_DIR2 (you might be able to get away without this one)")
-    message("       PYTHON_EXECUTABLE   (you might be able to get away without this one)")
-    message("${ColourReset}")
+  message("${BoldRed}   PythonLibs NOT found, so pybind11 cannot be used. Ditching support for Python backends.${ColourReset}")
+  message("   If you *do* have the Python libraries installed, you should first try setting/unsetting")
+  message("   FORCE_PYTHON2 or FORCE_PYTHON3 when invoking cmake (make sure to clean out your build")
+  message("   directory in between any such changes).  If that does not work, you can manually set the")
+  message("   following variables when invoking cmake (also making sure to clean out your build dir):")
+  message("     PYTHON_LIBRARY")
+  message("     PYTHON_INCLUDE_DIR")
+  message("     PYTHON_INCLUDE_DIR2 (you might be able to get away without setting this one)")
+  message("     PYTHON_EXECUTABLE   (you might be able to get away without setting this one)")
 else()
-    set(MIN_pybind11_VERSION "2.2.0")
-    set(PREFERRED_pybind11_VERSION "2.2.1")
-    set(pybind11_CONTRIB_DIR "${PROJECT_SOURCE_DIR}/contrib/pybind11")
-    find_package(pybind11 QUIET)
-    if(NOT pybind11_FOUND AND EXISTS "${pybind11_CONTRIB_DIR}")
-      use_contributed_pybind11()
-    endif()
-    if(pybind11_FOUND)
-      if(pybind11_VERSION VERSION_LESS MIN_pybind11_VERSION)
-        message("${BoldRed}   Found pybind11 ${pybind11_VERSION}. GAMBIT requires at least v${MIN_pybind11_VERSION}.${ColourReset}")
-        set(pybind11_FOUND FALSE)
-      else()
-        message("${BoldYellow}   Found pybind11 ${pybind11_VERSION} at ${pybind11_DIR}.${ColourReset}")
-        include_directories("${PYTHON_INCLUDE_DIRS};${PYBIND11_INCLUDE_DIR}")
-      endif()
+  set(MIN_pybind11_VERSION "2.2.0")
+  set(PREFERRED_pybind11_VERSION "2.2.1")
+  set(pybind11_CONTRIB_DIR "${PROJECT_SOURCE_DIR}/contrib/pybind11")
+  find_package(pybind11 QUIET)
+  if(NOT pybind11_FOUND AND EXISTS "${pybind11_CONTRIB_DIR}")
+    use_contributed_pybind11()
+  endif()
+  if(pybind11_FOUND)
+    if(pybind11_VERSION VERSION_LESS MIN_pybind11_VERSION)
+      message("${BoldRed}   Found pybind11 ${pybind11_VERSION}. GAMBIT requires at least v${MIN_pybind11_VERSION}.${ColourReset}")
+      set(pybind11_FOUND FALSE)
     else()
-      message("${BoldRed}   The pybind11 library is not properly installed.${ColourReset}")
+      message("${BoldYellow}   Found pybind11 ${pybind11_VERSION} at ${pybind11_DIR}.${ColourReset}")
+      include_directories("${PYTHON_INCLUDE_DIRS};${PYBIND11_INCLUDE_DIR}")
     endif()
-    if(NOT pybind11_FOUND AND NOT EXISTS "${pybind11_CONTRIB_DIR}")
-      message("${BoldRed}   CMake will now download and install pybind11 v${PREFERRED_pybind11_VERSION}.${ColourReset}")
-      execute_process(RESULT_VARIABLE result COMMAND git clone https://github.com/pybind/pybind11.git ${pybind11_CONTRIB_DIR})
-      if(${result} STREQUAL "0")
-        execute_process(COMMAND ${CMAKE_COMMAND} -E chdir ${pybind11_CONTRIB_DIR} git checkout -q v${PREFERRED_pybind11_VERSION})
-        use_contributed_pybind11()
-        include_directories("${PYTHON_INCLUDE_DIRS};${PYBIND11_INCLUDE_DIR}")
-      else()
-        message("${BoldRed}   Attempt to clone git repository for pybind11 failed.  This may be because you are disconnected from the internet.\n   "
-                "Otherwise, your git installation may be faulty. Errors about missing .so files are usually due to\n   "
-                "your git installation being linked to a buggy version of libcurl.  In that case, try reinstalling libcurl.${ColourReset}")
-      endif()
+  else()
+    message("${BoldRed}   The pybind11 library is not properly installed.${ColourReset}")
+  endif()
+  if(NOT pybind11_FOUND AND NOT EXISTS "${pybind11_CONTRIB_DIR}")
+    message("${BoldRed}   CMake will now download and install pybind11 v${PREFERRED_pybind11_VERSION}.${ColourReset}")
+    execute_process(RESULT_VARIABLE result COMMAND git clone https://github.com/pybind/pybind11.git ${pybind11_CONTRIB_DIR})
+    if(${result} STREQUAL "0")
+      execute_process(COMMAND ${CMAKE_COMMAND} -E chdir ${pybind11_CONTRIB_DIR} git checkout -q v${PREFERRED_pybind11_VERSION})
+      use_contributed_pybind11()
+      include_directories("${PYTHON_INCLUDE_DIRS};${PYBIND11_INCLUDE_DIR}")
+    else()
+      message("${BoldRed}   Attempt to clone git repository for pybind11 failed.  This may be because you are disconnected from the internet.\n   "
+              "Otherwise, your git installation may be faulty. Errors about missing .so files are usually due to\n   "
+              "your git installation being linked to a buggy version of libcurl.  In that case, try reinstalling libcurl.${ColourReset}")
     endif()
-    set(HAVE_PYBIND11 "${pybind11_FOUND}")
+  endif()
+  set(HAVE_PYBIND11 "${pybind11_FOUND}")
 endif()
 
 # Check for required Python libraries
