Changed Python2/3 treatment in CMakeLists.txt slightly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,12 +115,18 @@ elseif (FORCE_PYTHON3)
   find_package(PythonInterp 3 REQUIRED)
   find_package(PythonLibs ${PYTHON_VERSION_STRING} EXACT)
 else()
-  find_package(PythonInterp REQUIRED)
-  if ((PYTHON_VERSION_MAJOR LESS 2) OR (PYTHON_VERSION_MAJOR EQUAL 2 AND PYTHON_VERSION_MINOR LESS 7))
-    message(FATAL_ERROR "\nGAMBIT requires Python 2.7 or 3.x.  \nIf you need to set the path to the Python interpreter manually, "
-                        "please use -DPYTHON_EXECUTABLE=path/to/preferred/python.")
+  find_package(PythonInterp 3)
+  if(PYTHONINTERP_FOUND)
+     find_package(PythonLibs 3)
+  else()
+      message("${BoldYellow}   Python 3 not found, searching for Python 2.7${ColourReset}")
+      find_package(PythonInterp 2 REQUIRED)
+      if (PYTHON_VERSION_MINOR LESS 7)
+        message(FATAL_ERROR "\nGAMBIT requires Python 2.7.  \nIf you need to set the path to the Python interpreter manually, "
+                            "please use -DPYTHON_EXECUTABLE:FILEPATH=path/to/preferred/python.")
+      endif()
+      find_package(PythonLibs 2)
   endif()
-  find_package(PythonLibs)
 endif()
 message("${BoldYellow}   Using Python interpreter version ${PYTHON_VERSION_STRING} for build.${ColourReset}")
 if(PYTHONLIBS_FOUND)
